# CMRelocator

./: .gitignore  pyproject.toml  requirements.txt
scripts/: Show-FolderTree.ps1  Test-CMRelocator.ps1
src/cmrelocator/: __init__.py  __main__.py  cmis_client.py  tui.py
